--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -113,11 +113,7 @@
             /* Align to the end of the container */
         }
 
-        /* Navbar scroll effect */
-        nav.scrolled {
-            background-color: rgba(0, 0, 0, 0.8);
-            transition: background-color 0.3s ease;
-        }
+       
 
         /* Section Styles */
         .section-title {
@@ -323,10 +319,10 @@
         <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20 ">
             <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl sm:text-center">
                 <h2
-                    class="mb-6 font-sans text-3xl text-center font-bold tracking-tight text-white sm:text-4xl sm:leading-none fade-in">
+                    class="mb-6 font-sans text-3xl text-center font-bold tracking-tight text-white sm:text-4xl sm:leading-none fall-in-top">
                     About Us
                 </h2>
-                <p class="mb-6 text-base text-indigo-200 md:text-lg fade-in">
+                <p class="mb-6 text-base text-indigo-200 md:text-lg fall-in-top">
                     The Student Association of the Department of Information Technology at Amal Jyothi College of
                     Engineering fosters innovation, collaboration, and technical excellence among students. It aims to
                     provide opportunities for skill development, leadership, and community engagement in the field of
@@ -344,16 +340,16 @@
 
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 fade-in">
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-left">
                                 <i class="fas fa-bullseye"></i>
                             </span>
                         </div>
 
                         <div class="mt-6">
-                            <h2 class="text-3xl font-bold tracking-tight text-white fade-in">
+                            <h2 class="text-3xl font-bold tracking-tight text-white slide-in-left">
                                 Mission:
                             </h2>
-                            <p class="mt-4 text-lg text-gray-300 fade-in">
+                            <p class="mt-4 text-lg text-gray-300 slide-in-left">
                                 To empower students by fostering innovation, collaboration, and technical excellence in
                                 the field of Information Technology. Through hands-on learning, community engagement,
                                 and leadership opportunities, we aim to create a supportive ecosystem that nurtures
@@ -366,7 +362,7 @@
                     </div>
                 </div>
                 <div class="mt-12 sm:mt-16 lg:mt-0">
-                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0 fade-in">
+                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0 slide-in-left">
                         <img loading="lazy" width="647" height="486"
                             class="w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
                             style="color:transparent" src="/images/mision.jpeg">
@@ -380,19 +376,19 @@
         <div class="relative">
             <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 slide-in-right"
                 id="slideBox">
-                <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2">
+                <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2 slide-in-right">
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-right">
                                 <i class="fas fa-eye"></i>
 
                             </span>
                         </div>
                         <div class="mt-6">
-                            <h2 class="text-3xl font-bold tracking-tight text-white">
+                            <h2 class="text-3xl font-bold tracking-tight text-white slide-in-right">
                                 Vision:
                             </h2>
-                            <p class="mt-4 text-lg text-gray-300">
+                            <p class="mt-4 text-lg text-gray-300 slide-in-right">
                                 To be a dynamic and inclusive student body that drives technological advancements,
                                 inspiring future leaders and innovators in Information Technology, while contributing to
                                 the local and global tech community. We strive to create a culture of continuous
