--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -87,10 +87,7 @@
             /* Align to the end of the container */
         }
 
-        nav.scrolled {
-            background-color: rgba(0, 0, 0, 0.8);
-            transition: background-color 0.5s ease;
-        }
+        
 
         @media (min-width: 1024px) {
             #navItems {
@@ -161,6 +158,7 @@
                 /* Force dark mode */
             }
         }
+
     </style>
 </head>
 
@@ -216,9 +214,11 @@
                 <div class="absolute inset-0 bg-black opacity-50"></div>
                 <div class="relative z-10 flex items-center justify-center h-full px-4 py-32 lg:px-8">
                     <div class="text-center" id="txt">
-                        <h1 class="mb-4 text-3xl sm:text-4xl md:text-5xl tracking-tight font-extrabold text-center text-white"
+                        <h1
+                            class="mb-4 text-3xl sm:text-4xl md:text-5xl tracking-tight font-extrabold text-center text-white"
                             id="typewriter"> <span class="sm:block"></span>
                         </h1>
+
                         <p class="mx-auto mt-4 max-w-2xl sm:text-l fade-in-empowering" id="empowering-text">
                             Empowering IT professionals and enthusiasts through knowledge sharing, events, and
                             networking.
@@ -386,7 +386,7 @@
                                 </svg>
                             </div>
                             <div class="ml-[18px]">
-                                <a href="mailto:help@lorem.com"
+                                <a href="mailto:testingpurposes240.com"
                                     class="font-Inter text-[14px] font-medium text-[#fff]">help@init.com</a>
 
                             </div>
@@ -401,11 +401,7 @@
                                 </svg>
                             </div>
                             <div class="ml-[18px]">
-                                <a href="mailto:help@lorem.com"
-                                    class="font-Inter text-[14px] font-medium text-[#fff]">Divisional Block A,<br> Amal
-                                    Jyothi College of Engineering
-                                </a>
-
+                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.5930089157644!2d76.821535517342!3d9.527660973876355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06362611521445%3A0x74959621916892ab!2sDepartment%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1727506947216!5m2!1sen!2sin" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
