--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -219,7 +219,7 @@
                             id="typewriter"> <span class="sm:block"></span>
                         </h1>
 
-                        <p class="mx-auto mt-4 max-w-2xl sm:text-l fade-in-empowering" id="empowering-text">
+                        <p class="mx-auto mt-4 max-w-2xl text-xl sm:text-l fade-in-empowering" id="empowering-text">
                             Empowering IT professionals and enthusiasts through knowledge sharing, events, and
                             networking.
                         </p>
@@ -313,7 +313,7 @@
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10 flex flex-col justify-center">
                             <nav class="flex px-4 justify-between items-center">
-                                <div class="lg:text-4xl text-2xl font-bold lg:mt-5">
+                                <div class="lg:text-4xl text-2xl font-bold lg:mt-5 mt-3">
                                     Competitions<span class="text-green-700">.</span>
                                 </div>
                                 <div>
@@ -345,13 +345,13 @@
         <div class=" bg-gray-900 pt-9 ">
             <div class="mx-auto w-full max-w-[1166px] px-4 xl:px-0">
                 <div class="flex flex-col justify-between sm:px-[18px] md:flex-row md:px-10">
-                    <div class="md:w-[316px] ">
-                        <p class="text-[18px] font-medium text-white">
+                    <div class="md:w-[316px] fade-in">
+                        <p class="text-[18px] font-medium text-white fade-in">
                         <h1 class="text-green-500 font-extrabold">
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
                         </h1>
                         </p>
-                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">The Student Association of the
+                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%] fade-in">The Student Association of the
                             Department of Information Technology at Amal Jyothi College of
                             Engineering fosters innovation, collaboration, and technical excellence among students. It
                             aims to
@@ -360,7 +360,7 @@
                             IT.</p>
 
                     </div>
-                    <div class="md:w-[316px] ">
+                    <div class="md:w-[316px] fade-in">
                         <div class="mt-[23px] flex">
                             <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -376,7 +376,7 @@
 
                             </div>
                         </div>
-                        <div class="mt-[23px] flex">
+                        <div class="mt-[23px] flex fade-in">
                             <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
                                 <svg width="20" height="15" viewBox="0 0 20 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -406,8 +406,8 @@
                         </div>
                     </div>
                     <div
-                        class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15">
-                        <div class="">
+                        class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15 fade-in">
+                        <div class="fade-in">
                             <p class="text-deutziawhite font-inter text-[18px] font-medium leading-normal">Pages</p>
                             <ul>
                                 <li class="mt-[15px]"><a
@@ -440,9 +440,9 @@
                         </div>
                     </div>
                 </div>
-                <hr class="mt-[30px] text-white" />
-                <div class="flex items-center justify-center pb-8 pt-[9px] md:py-8">
-                    <p class="text-[10px] font-normal text-white md:text-[12px]">
+                <hr class="mt-[30px] text-white fade-in" />
+                <div class="flex items-center justify-center pb-8 pt-[9px] md:py-8 ">
+                    <p class="text-[10px] font-normal text-white md:text-[12px] ">
                         © Copyright
                         <!-- -->2024
                         <!-- -->, All Rights Reserved by init() IT Association |
