--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Tags for About Page -->
+    <title>About Us - Init() IT Association | Amal Jyothi College</title>
+    <meta name="keywords"
+        content="about Init association, IT association, about amal jyothi IT, init vision, init mission, IT community Kerala, amal jyothi IT association, student tech community">
+    <meta name="description"
+        content="Learn more about Init() IT Association at Amal Jyothi College. Discover our mission, vision, and commitment to fostering a thriving IT community for students and professionals.">
+    <meta property="og:title" content="About Us - Init() IT Association">
+    <meta property="og:description"
+        content="Init() IT Association at Amal Jyothi College is dedicated to creating an engaged community for IT students and professionals. Learn more about our values and goals.">
+    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:url" content="https://init-website.onrender.com/about">
+
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +24,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kode+Mono:wght@400..700&display=swap"
         rel="stylesheet">
-    <title>About Us - init() IT Association</title>
     <style>
         /* General Styles */
         html {
@@ -113,7 +124,7 @@
             /* Align to the end of the container */
         }
 
-       
+
 
         /* Section Styles */
         .section-title {
@@ -340,7 +351,8 @@
 
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-left">
+                            <span
+                                class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-left">
                                 <i class="fas fa-bullseye"></i>
                             </span>
                         </div>
@@ -379,7 +391,8 @@
                 <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2 slide-in-right">
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-right">
+                            <span
+                                class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 slide-in-right">
                                 <i class="fas fa-eye"></i>
 
                             </span>
@@ -428,7 +441,8 @@
             </div>
 
 
-            <div class="relative mx-auto max-w-7xl z-10 grid grid-cols-1 gap-10 pt-14 sm:grid-cols-1 lg:grid-cols-3" id="fallBox">
+            <div class="relative mx-auto max-w-7xl z-10 grid grid-cols-1 gap-10 pt-14 sm:grid-cols-1 lg:grid-cols-3"
+                id="fallBox">
                 <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow" id="fallBox">
                     <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
                         style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
@@ -531,7 +545,10 @@
                                 </svg>
                             </div>
                             <div class="ml-[18px]">
-                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.5930089157644!2d76.821535517342!3d9.527660973876355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06362611521445%3A0x74959621916892ab!2sDepartment%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1727506947216!5m2!1sen!2sin" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.5930089157644!2d76.821535517342!3d9.527660973876355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06362611521445%3A0x74959621916892ab!2sDepartment%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1727506947216!5m2!1sen!2sin"
+                                    width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                             </div>
                         </div>
