--- a/myapp/views/events.hbs
+++ b/myapp/views/events.hbs
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Tags for Events Page -->
+    <title>Upcoming IT Events - Init() IT Association</title>
+    <meta name="keywords"
+        content="init events, IT events, amal jyothi events, tech workshops, seminars, IT association, amal jyothi IT, student tech events, Kerala engineering events">
+    <meta name="description"
+        content="Stay updated with the latest IT events, seminars, and workshops hosted by Init() IT Association at Amal Jyothi College. Join us for networking and professional growth in the IT community.">
+    <meta property="og:title" content="Upcoming IT Events - Init() IT Association">
+    <meta property="og:description"
+        content="Join Init() IT Association at Amal Jyothi College for exciting IT events, workshops, and seminars. Be part of the thriving tech community.">
+    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:url" content="https://init-website.onrender.com/events">
+
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -13,7 +25,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kode+Mono:wght@400..700&display=swap"
         rel="stylesheet">
-    <title>Events - init() IT Association</title>
+
     <style>
         @media (prefers-color-scheme: light) {
             html {
@@ -48,7 +60,7 @@
             overflow-x: hidden;
         }
 
-        
+
 
         /* Container for events */
         .events-container {
@@ -521,9 +533,6 @@
         /*
 -- End BackGround Animation 
 */
-
-
-
     </style>
 </head>
 
