--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-        content="ajce, init, it department, amal jyothi, amal jyothi it, amal jyothi it department, init association, students it, amal jyothi students,Amal Jyothi,IT,Kerala, Engineering, B.Tech IT, ts harikrishnan">
+        content="ajce, init association, it department, amal jyothi college, it students, amal jyothi IT, engineering IT Kerala, B.Tech IT, Amal Jyothi engineering events, tech community, ts harikrishnan">
     <meta name="description"
-        content="Init() IT Association is dedicated to fostering a community of IT professionals and enthusiasts. We provide a platform for knowledge sharing, professional growth, and networking through a variety of events and resources. Stay updated with our latest events and news.">
+        content="Init() IT Association at Amal Jyothi College is a community of IT professionals and enthusiasts. Join us for knowledge sharing, professional growth, and networking through exciting events and resources. Stay updated and explore more!">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <meta property="og:title" content="Init() IT Association">
+    <meta property="og:description"
+        content="Join Init() IT Association to foster growth in IT. Explore our events and community resources at Amal Jyothi College.">
+    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:url" content="init-website.onrender.com">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +93,7 @@
             /* Align to the end of the container */
         }
 
-        
+
 
         @media (min-width: 1024px) {
             #navItems {
@@ -158,7 +164,6 @@
                 /* Force dark mode */
             }
         }
-
     </style>
 </head>
 
@@ -213,8 +218,7 @@
                 <div class="absolute inset-0 bg-black opacity-50"></div>
                 <div class="relative z-10 flex items-center justify-center h-full px-4 py-32 lg:px-8">
                     <div class="text-center" id="txt">
-                        <h1
-                            class="mb-4 text-3xl sm:text-4xl md:text-5xl tracking-tight font-extrabold text-center text-white"
+                        <h1 class="mb-4 text-3xl sm:text-4xl md:text-5xl tracking-tight font-extrabold text-center text-white"
                             id="typewriter"> <span class="sm:block"></span>
                         </h1>
 
@@ -350,7 +354,8 @@
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
                         </h1>
                         </p>
-                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%] fade-in">The Student Association of the
+                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%] fade-in">The Student Association of
+                            the
                             Department of Information Technology at Amal Jyothi College of
                             Engineering fosters innovation, collaboration, and technical excellence among students. It
                             aims to
@@ -400,7 +405,10 @@
                                 </svg>
                             </div>
                             <div class="ml-[18px]">
-                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.5930089157644!2d76.821535517342!3d9.527660973876355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06362611521445%3A0x74959621916892ab!2sDepartment%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1727506947216!5m2!1sen!2sin" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.5930089157644!2d76.821535517342!3d9.527660973876355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06362611521445%3A0x74959621916892ab!2sDepartment%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1727506947216!5m2!1sen!2sin"
+                                    width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
